--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     {name: 'Love', color: '#FF69B4'}
   ];
 
-  const baseUrl = 'https://fuoriscala.github.io/fuori-scala-feelings/index.html';
+  const baseUrl = 'https://fuoriscala.github.io/fuori-scala-feelings2/';
 
   const container = document.getElementById('container');
 
