--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     {name: 'Love', color: '#FF69B4'}
   ];
 
-  const baseUrl = 'https://fuoriscala.github.io/fuori-scala-feelings2/';
+  // Cambia qui con la URL della tua pagina principale che legge il parametro emotion
+  const baseUrl = 'https://fuoriscala.github.io/fuori-scala-feelings2/index.html';
 
   const container = document.getElementById('container');
 
