--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Fuori Scala Feelings - QR Codes</title>
+<title>Fuori Scala Feelings - QR Codes Generator</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 <style>
   body {
@@ -44,8 +44,7 @@
     {name: 'Love', color: '#FF69B4'}
   ];
 
-  // Cambia qui con la URL della tua pagina principale che legge il parametro emotion
-  const baseUrl = 'https://fuoriscala.github.io/fuori-scala-feelings2/index.html';
+  const baseUrl = 'https://fuoriscala.github.io/fuori-scala-feelings2/mood.html';
 
   const container = document.getElementById('container');
 
